# PhysicsSimulations

./: .gitignore  README.md
BroadPhase/: CMakeLists.txt
BroadPhase/media/: how_it_works.md
BroadPhase/src/: aabb.h  bvh.cpp  bvh.h  main.cpp  physics.cpp  physics.h  renderer.cpp  renderer.h  shape.cpp  shape.h  ui.h  vec2.h
ElectronOrbitals/: CMakeLists.txt  spec.md
ElectronOrbitals/src/: camera.h  main.cpp  mat4.h  orbital.h  renderer.cpp  renderer.h  vec3.h
EulerVsVerlet/: CMakeLists.txt  spec.md
EulerVsVerlet/media/: how_it_works.md
EulerVsVerlet/src/: main.cpp  renderer.cpp  renderer.h  spring_euler.cpp  spring_euler.h  spring_verlet.cpp  spring_verlet.h  vec2.h
QuaternionVis/: CMakeLists.txt  spec.md
QuaternionVis/media/: how_it_works.md
QuaternionVis/src/: main.cpp  mat4.h  quat.h  renderer.cpp  renderer.h  sphere.cpp  sphere.h
VerletChain/: CMakeLists.txt  SPEC.md
VerletChain/media/: how_it_works.md
VerletChain/src/: chain.cpp  chain.h  main.cpp  renderer.cpp  renderer.h  vec2.h
